2008-02-11  Lillian Angel  <langel@redhat.com>

	* Makefile.am: Changed cp -a arg to -dpPR.
	* Makefile.in: Regenerate.

2008-02-07  Lillian Angel  <langel@redhat.com>

	* Makefile.in: Regenerate.
	* acinclude.m4: Removed FIND_FREETYPE2 and CHECK_HEADERS block.
	* configure: Regenerate.
	* configure.ac: Added pkg-config check for all packages using 
	pkg-config.

2008-02-07  Joshua Sumali  <jsumali@redhat.com>

	* README: Updated NetX information.

2008-02-05  Lillian Angel  <langel@redhat.com>

	* Makefile.am: Changed LIBGCJ_OLD to GCC_OLD.
	* Makefile.in: Regenerate.
	* acinclude.m4: Renamed LIBGCJ_OLD to GCC_OLD.
	* configure: Regenerate.
	* configure.ac: Renamed LIBGCJ_OLD to GCC_OLD.

2008-02-05  Joshua Sumali  <jsumali@redhat.com>

	* tools/netx/jnlp/Launcher.java: Removed unused line.
	* tools/netx/jnlp/resources/Messages.properties: Added security messages
	for security dialogs.
	* tools/netx/jnlp/runtime/ApplicationInstance.java: Added signing field.
	* tools/netx/jnlp/runtime/Boot.java: Use jar root default.jnlp
	* tools/netx/jnlp/runtime/JNLPClassLoader.java: Added security warning
	dialogs when running signed code.
	* tools/netx/jnlp/runtime/JNLPRuntime.java: Enable code signing
	verification by default.
	* tools/netx/jnlp/services/ServiceUtil.java: Added enum for different
	access types that may need permissions.
	(checkAccess(AccessType)): New method.
	* tools/netx/jnlp/services/XDownloadService.java: Fixed typo.
	* tools/netx/jnlp/services/XExtensionInstallerService.java: Likewise.
	* tools/netx/jnlp/services/XServiceManagerStub.java: Added support for new
	services.
	* tools/netx/jnlp/tools/JarSigner.java:
	(verifyJars): New method.
	(allVerified): Likewise.
	(anyJarsSigned): Likewise.
	(getDetails): Likewise.
	(getCerts): Likewise.
	(verifyJar): Keep track of CertPaths used for CertsInfoPane
	* tools/netx/jnlp/security/CertsInfoPane.java: New file.
	* tools/netx/jnlp/security/MoreInfoPane.java: Likewise.